# voxelement

./: .gitignore  README.md  package.json
voxel/: Cargo.toml
voxel-lib/: Cargo.toml
voxel-server/: Cargo.toml
voxel/src/: app.rs  main.rs
voxel/src/app/: shader.rs
